--- a/my-app-new/src/components/AutoMany/style.css
+++ b/my-app-new/src/components/AutoMany/style.css
@@ -37,12 +37,15 @@
   width: 280px;
   border: 1px solid #aaa;
   background-color: #fff;
-  font-family: Helvetica, sans-serif;
   font-weight: 300;
   font-size: 16px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   z-index: 2;
+  /* Allowing scroll */
+  max-height: 20em;
+  overflow-y: auto;
+    /* --- */
 }
 
 .react-autosuggest__suggestions-list {
