--- a/my-app-new/src/components/Vehicle/style.css
+++ b/my-app-new/src/components/Vehicle/style.css
@@ -1,95 +1,95 @@
 .selectcontainer {
-
-    width: 80%;
-    margin: 0 auto;
-
-}
-
-
-#Break {
-
-    height: 6em;
-
-}
-
-
-#ButtonBreak {
-    
-    height: 6em;
-    
-}
-
-
-.flex-container {
-
-    display: flex;
-
-}
-
-.flex-item-1{
-
-    border-width: 1px 0 1px 1px; 
-    border-radius: 5px 0 0 5px;
-    padding: 20px;
-    font-size: 0.9em;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: transparent;
-    /*border-bottom: 0.0625rem solid #6B7789;*/
-    display: block;
-    color: #222;
-    font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
-    position: relative;
-    text-overflow: ellipsis;
-    width: 82%;
-    z-index: 50;
-
-}
-
-
-.flex-item-2 {
   
-    border-width: 1px 1px 1px 0; 
-    border-radius: 0 5px 5px 0;
-    padding: 20px;
-    font-size: 0.9em;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: transparent;
-    border-right: 0.0625rem solid #A6A6A6;
-    display: block;
-    color: #222;
-    font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
-    position: relative;
-    text-overflow: ellipsis;
-    width: 75%;
-    z-index: 50;    
-    
+      width: 80%;
+      margin: 0 auto;
+  
   }
-
-
-  .flex-item-3{
+  
+  
+  #Break {
+  
+      height: 6em;
+  
+  }
+  
+  
+  #ButtonBreak {
+      
+      height: 6em;
+      
+  }
+  
+  
+  .flex-container {
+  
+      display: flex;
+  
+  }
+  
+  .flex-item-1{
+  
+      border-width: 1px 0 1px 1px; 
+      border-radius: 5px 0px 0 5px;
+      padding: 20px;
+      font-size: 0.9em;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background-color: transparent;
+      /*border-bottom: 0.0625rem solid #6B7789;*/
+      display: block;
+      color: #222;
+      font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
+      position: relative;
+      text-overflow: ellipsis;
+      width: 82%;
+      z-index: 50;
+  
+  }
+  
+  
+  .flex-item-2 {
     
-        border-width: 1px 0 1px 0; 
-        /*border-radius: 0 0 0 0;*/
-        padding: 20px;
-        font-size: 0.9em;
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-        background-color: transparent;
-        /*border-bottom: 0.0625rem solid #6B7789;*/
-        display: block;
-        color: #222;
-        font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
-        position: relative;
-        text-overflow: ellipsis;
-        width: 22%;
-        z-index: 50;
-    
+      border-width: 1px 0 1px 0; 
+      border-radius: 0 0 0 0;
+      padding: 20px;
+      font-size: 0.9em;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background-color: transparent;    
+      display: block;
+      color: #222;
+      font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
+      position: relative;
+      text-overflow: ellipsis;
+      text-align: center;
+      width: 40%;
+      z-index: 50;    
+      
     }
+  
+  
+    .flex-item-3{
+      
+      border-width: 1px 1px 1px 0; 
+      border-radius: 0 5px 5px 0;
+      padding: 20px;
+      font-size: 0.9em;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      background-color: transparent;
+      border-right: 0.0625rem solid #A6A6A6;
+      display: block;
+      color: #222;
+      font-family: "Allstate Sans", Arial, Helvectica, sans-serif;
+      position: relative;
+      text-overflow: ellipsis;
+      width: 75%;
+      z-index: 50;    
+      
+      }
 
 /* 
 
