--- a/my-app-new/src/components/Vehicle/style.css
+++ b/my-app-new/src/components/Vehicle/style.css
@@ -169,7 +169,7 @@ color: #efefee;
           right: 0; }
       .c-dropdown__menu::-ms-expand {
         display: none; }
-    .c-dropdown__underline {
+   /* .c-dropdown__underline {
       background: #003B9B;
       bottom: 0;
       height: 0.125rem;
@@ -178,7 +178,7 @@ color: #efefee;
       order: 3;
       right: 50%;
       transition: left .2s, right .2s;
-      z-index: 1; }
+      z-index: 1; } */
     .c-dropdown__icon {
       border: 0.375rem solid transparent;
       /*border-top: 0.375rem solid #003B9B;*/
