--- a/my-app-new/src/App.css
+++ b/my-app-new/src/App.css
@@ -39,6 +39,11 @@ body {
   font-family: 'Allstate Sans', sans-serif;
   font-weight: 400; }
 
+  .big-break {
+
+  height: 200em;
+
+  }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
